2008-03-05  Alp Toker  <alp@atoker.com>

        Add a missing make dependency for derived sources to improve
        autotools build dependency tracking.

        Issue spotted by Ori Bernstein.

        * GNUmakefile.am:

2008-03-05  Alp Toker  <alp@atoker.com>

        GTK+ build fix for breakage introduced in r30800.

        Track moved bridge sources from JavaScriptCore to WebCore.

        * GNUmakefile.am:

2008-03-05  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Darin.

        One part of fix for:
        <rdar://problem/5780697> Copying content with percentage based rules in a style sheet will cause fidelity issues

        * editing/markup.cpp:
        (WebCore::appendStartMarkup): Styles from matched rules should take precedence over those in
        inline style declarations, not the other way around. 

2008-03-05  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin.

        Move JNI specific code from runtime_root over to jni_jsobject, where it is used.

        * bridge/jni/jni_jsobject.cpp:
        (completedJavaScriptAccess):
        (initializeJavaScriptAccessLock):
        (lockJavaScriptAccess):
        (unlockJavaScriptAccess):
        (dispatchToJavaScriptThread):
        (performJavaScriptAccess):
        (JavaJSObject::initializeJNIThreading):
        (isJavaScriptThread):
        (JavaJSObject::invoke):
        * bridge/jni/jni_jsobject.h:
        * bridge/runtime_root.cpp:
        * bridge/runtime_root.h:
        * page/mac/WebCoreFrameBridge.mm:
        (-[WebCoreFrameBridge init]):

2008-03-05  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        - add functions giving offsets within a KURL, slated to replace the
          EncodedURL object in CSSStyleSelector (in a future "visited link" change)
        - changed all KURL data members names to use the traditional m_ prefix
        - initialize all members to 0 in invalid KURLs rather than having all
          functions check m_isValid
